# taiko-mk1

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  justfile
.github/: CODEOWNERS
.github/workflows/: coverage.yml  lint.yml  unit.yml
crates/chainio/: Cargo.toml
crates/chainio/src/: lib.rs
crates/chainio/src/taiko/: anchor.rs  inbox.rs  mod.rs  preconf_router.rs  preconf_whitelist.rs  token.rs  wrapper.rs
crates/clients/: Cargo.toml
crates/clients/src/: beacon.rs  engine.rs  execution.rs  lib.rs  taiko_preconf.rs
crates/config/: Cargo.toml
crates/config/src/: chain.rs  lib.rs  operator.rs  preconf.rs  telemetry.rs
crates/driver/: Cargo.toml
crates/driver/src/: config.rs  driver.rs  helpers.rs  lib.rs  lookahead.rs  metrics.rs  state.rs  status.rs
crates/driver/src/batch_submitter/: errors.rs  mod.rs  poster.rs  processor.rs
crates/driver/src/block_builder/: mod.rs  state.rs
crates/driver/src/sync/: mod.rs  soft_blocks.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: blob.rs  lib.rs  retries.rs  shutdown.rs  summary.rs  task.rs  time.rs
crates/primitives/src/compression/: estimate.rs  mod.rs
crates/primitives/src/taiko/: batch.rs  batch_map.rs  block.rs  builder.rs  constants.rs  deterministic_signer.rs  mod.rs
crates/primitives/test_data/blobs/: generated_blob
testground/: DevnetInbox.testground.sol  README.md  docker-compose.yml  jwt.hex  network_params.yml  network_params_blockscout.yml  pk1.txt  pk2.txt
testground/scripts/: common.sh  list_preconfirmers.sh  missed_slots.sh  start.sh  stop.sh
