[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.0.4-alpha"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Chainbound developers <dev@chainbound.io>"]
repository = "https://github.com/chainbound/mk1"
exclude = [".github/"]

[workspace.dependencies]
# async
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync", "signal"] }
tokio-stream = "0.1.17"
tokio-retry = "0.3.0"
futures = "0.3.31"

# allocator
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = "0.6"

# cli
clap = { version = "4.5.35", features = ["derive", "env"] }

# observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "ansi"] }
opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["tokio"] }
opentelemetry-appender-tracing = { version = "0.29", features = ["experimental_metadata_attributes"] }
opentelemetry_sdk = "0.29.0"
metrics-exporter-prometheus = "0.16.2"
metrics = "0.24.1"

# web
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.26.2"
http-body-util = "0.1.3"
tower = "0.5.2"

# ethereum
alloy = { version = "1.0.0", features = ["consensus", "json", "rpc-types", "rpc-types-beacon", "reqwest", "kzg", "arbitrary", "provider-ws"] }
alloy-contract = { version = "1.0.0" }
alloy-json-rpc = { version = "1.0.0" }
alloy-rpc-types-engine = { version = "1.0.0", default-features = false, features = ["jwt"] }
alloy-rpc-types-trace = { version = "1.0.0", default-features = false }
alloy-transport-http = { version = "1.0.0", default-features = false, features = ["jwt-auth"] }
alloy-provider = { version = "1.0.0", default-features = false, features = ["engine-api"] }
alloy-primitives = { version = "1.0.0" }
alloy-rlp = "0.3.11"
alloy-sol-types = "1.0.0"
alloy-sol-macro = "1.0.0"

# beacon chain
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "ade5ce6" } # Last release in 2022
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "ade5ce6" }  # Last release in 2022

# types
derive_more = { version = "1.0.0", features = ["from", "deref", "deref_mut", "is_variant", "into_iterator", "into"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0"
dotenvy = "0.15.7"
flate2 = "1.1"
bytes = "1.10.1"
eyre = "0.6.12"

# testing
mockito = "1.7.0"
approx = "0.5.1"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
bitcode = "0.6.6"

# randomness
rand = "0.9.0"

# crypto
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
non_std_lazy_statics = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_semicolon = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
